Subir archivos de página web

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </div>
   <br>
   <div class="contenedor2">
-    <form action="https://formsubmit.co/tortas.mexico.oriente.com" method="post" name="formulario_menu">
+    <form action="https://formsubmit.co/tortas.mexico.oriente@gmail.com" method="post" name="formulario_menu">
       <input type="text" name="Nombre" placeholder="Nombre Completo*" class="campos" required>
       <br>
       <input type="email" placeholder="Correo Electrónico*" name="email" class="campos" required>
@@ -269,7 +269,8 @@
       <br>
       <input type="submit" name="Enviar" id="Enviar" value="Enviar" onclick="return confirmacion()">
 
-      <input type="hidden" name="_next" value="https://projects-web-sites.github.io/tortas.mexico.oriente.com/">
+      <input type="hidden" name="_next" value="https://projects-web-sites.github.io/
+      tortas.mexico.oriente.com/">
       <input type="hidden" name="_captcha" value="false">
     </form>
   </div>
